--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "babel-loader": "^8.0.0-beta.0",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.6",
     "html-loader": "^0.5.1",
     "style-loader": "^0.19.0",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   }
