--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-widget",
   "scripts": {
-    "build": "./node_modules/.bin/webpack --config webpack.config.js",
+    "build": "./node_modules/.bin/webpack --config webpack.config.js ",
     "build-release": "./node_modules/.bin/webpack --config webpack.config.js --env.prod",
     "start": "./node_modules/.bin/webpack-dev-server --open"
   },
@@ -18,6 +18,7 @@
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
+    "dotenv": "^6.2.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.1",
     "style-loader": "^0.19.0",
@@ -27,10 +28,16 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "base64-inline-loader": "^1.1.1",
+    "date-fns": "^1.30.1",
     "font-awesome": "^4.7.0",
+    "local-storage": "^1.4.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "styled-components": "^4.1.2"
+    "react-scrollbar": "^0.5.4",
+    "styled-components": "^4.1.2",
+    "uniqid": "^5.0.3",
+    "uuid": "^3.3.2"
   }
 }
