--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "local-storage": "^1.4.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-scrollbar": "^0.5.4",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.2",
     "uniqid": "^5.0.3",
     "uuid": "^3.3.2"
