--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scrollbar": "^0.5.4",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^2.2.0",
     "styled-components": "^4.1.2",
     "uniqid": "^5.0.3",
     "uuid": "^3.3.2"
