--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^1.30.1",
     "local-storage": "^1.4.2",
     "react": "^16.6.3",
+    "react-audio-player": "^0.11.0",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "react-scrollbar": "^0.5.4",
