--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.6.3",
     "react-audio-player": "^0.11.0",
     "react-dom": "^16.6.3",
+    "react-player": "^1.9.3",
     "react-redux": "^6.0.0",
     "react-scrollbar": "^0.5.4",
     "redux": "^4.0.1",
