--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.18.0",
     "base64-inline-loader": "^1.1.1",
     "date-fns": "^1.30.1",
+    "hls.js": "^0.12.3",
     "local-storage": "^1.4.2",
     "react": "^16.6.3",
     "react-audio-player": "^0.11.0",
