--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
@@ -33,7 +34,7 @@
     "date-fns": "^1.30.1",
     "hls.js": "^0.12.3",
     "local-storage": "^1.4.2",
-    "react": "^16.6.3",
+    "react": "^16.9.0",
     "react-audio-player": "^0.11.0",
     "react-dom": "^16.6.3",
     "react-player": "^1.9.3",
