--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "axios": "^0.18.0",
     "base64-inline-loader": "^1.1.1",
     "date-fns": "^1.30.1",
+    "disable-scroll": "^0.5.0",
     "hls.js": "^0.12.3",
     "local-storage": "^1.4.2",
     "react": "^16.9.0",
     "react-audio-player": "^0.11.0",
+    "react-div-100vh": "^0.3.4",
     "react-dom": "^16.6.3",
     "react-player": "^1.9.3",
     "react-redux": "^6.0.0",
+    "react-screen-orientation": "0.0.4",
     "react-scrollbar": "^0.5.4",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
