--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^2.11.5"
   },
   "dependencies": {
+    "audio-recorder-polyfill": "^0.3.4",
     "axios": "^0.18.1",
     "base64-inline-loader": "^1.1.1",
     "date-fns": "^1.30.1",
