--- a/package.json
+++ b/package.json
@@ -26,35 +26,22 @@
     "svg-inline-loader": "^0.8.0",
     "ttf-loader": "^1.0.2",
     "webpack": "^3.8.1",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-dev-server": "^2.11.5"
   },
   "dependencies": {
     "audio-recorder-polyfill": "^0.3.4",
     "axios": "^0.18.1",
     "base64-inline-loader": "^1.1.1",
-    "date-fns": "^1.30.1",
-    "disable-scroll": "^0.5.0",
-    "firebase": "^7.6.2",
-    "get-blob-duration": "^1.1.0",
-    "hls.js": "^0.12.3",
     "local-storage": "^1.4.2",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-audio-player": "^0.11.0",
-    "react-div-100vh": "^0.3.4",
     "react-dom": "^16.6.3",
-    "react-firebase-file-uploader": "^2.4.3",
     "react-mic": "^12.4.1",
     "react-player": "^1.9.3",
-    "react-redux": "^6.0.0",
-    "react-screen-orientation": "0.0.4",
-    "react-scrollbar": "^0.5.4",
-    "recompose": "^0.30.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
     "styled-components": "^4.1.2",
-    "uniqid": "^5.0.3",
     "uuid": "^3.3.2"
   }
 }
