--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "dotenv": "^6.2.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-safe-parser": "^4.0.2",
     "style-loader": "^0.19.0",
     "svg-inline-loader": "^0.8.2",
+    "terser-webpack-plugin": "^3.0.0",
     "ttf-loader": "^1.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "3.3.11",
