--- a/package.json
+++ b/package.json
@@ -28,11 +28,9 @@
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^3.0.0",
     "ttf-loader": "^1.0.2",
-
     "webpack": "^4.43.0",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "^3.10.3"
-
   },
   "dependencies": {
     "audio-recorder-polyfill": "^0.3.4",
@@ -47,6 +45,7 @@
     "react-player": "^1.9.3",
     "socket.io": "^2.2.0",
     "styled-components": "^4.1.2",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "webpack-bundle-analyzer": "^3.7.0"
   }
 }
