--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "js-widget",
   "scripts": {
-    "build": "./node_modules/.bin/webpack --config webpack.config.js",
-    "build-release": "./node_modules/.bin/webpack --config webpack.config.js --env.prod",
-    "start": "./node_modules/.bin/webpack-dev-server --env.dev --open"
+    "build": "./node_modules/.bin/webpack --config webpack.config.js --env.ENVIRONMENT=development",
+    "build-main": "./node_modules/.bin/webpack --config webpack.config.js --env.ENVIRONMENT=main",
+    "build-webview": "./node_modules/.bin/webpack --config webpack.config.js --env.ENVIRONMENT=webview",
+    "build-test": "./node_modules/.bin/webpack --config webpack.config.js --env.ENVIRONMENT=test",
+    "build-big": "./node_modules/.bin/webpack --config webpack.config.js --env.ENVIRONMENT=big",
+    "start": "./node_modules/.bin/webpack-dev-server --env.ENVIRONMENT=development --open"
   },
   "babel": {
     "presets": [
