--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build": "./node_modules/.bin/webpack --config webpack.config.js --env.ENVIRONMENT=development",
     "build-main": "./node_modules/.bin/webpack --config webpack.config.js --env.ENVIRONMENT=main",
-    "build-webview": "./node_modules/.bin/webpack --config webpack.config.js --env.ENVIRONMENT=webview",
+    "build-mobile": "./node_modules/.bin/webpack --config webpack.config.js --env.ENVIRONMENT=mobile",
     "build-test": "./node_modules/.bin/webpack --config webpack.config.js --env.ENVIRONMENT=test",
     "build-big": "./node_modules/.bin/webpack --config webpack.config.js --env.ENVIRONMENT=big",
     "start": "./node_modules/.bin/webpack-dev-server --env.ENVIRONMENT=development --open"
