--- a/.env.formobile
+++ b/.env.formobile
@@ -1,3 +1,3 @@
-PUBLIC_PATH="api.eyezon.app/scriptformob/"
+PUBLIC_PATH="https://api.eyezon.app/scriptformob/"
 BUNDLE_OUTPUT_DIR="./mobile"
 LEAVE_OPTION="false"
