fix: block push button for android webview

--- a/.env.forbig
+++ b/.env.forbig
@@ -1,3 +1,4 @@
 PUBLIC_PATH="https://storage.googleapis.com/eyezonforbig/"
 BUNDLE_OUTPUT_DIR="./big"
 LEAVE_OPTION="true"
+ALLOW_NOTIFICATIONS="true"
