--- a/.env.formain
+++ b/.env.formain
@@ -1,3 +1,4 @@
 PUBLIC_PATH="https://storage.googleapis.com/eyezonscript/"
 BUNDLE_OUTPUT_DIR="./main"
 LEAVE_OPTION="true"
+ALLOW_NOTIFICATIONS="true"
