--- a/.env.fortest
+++ b/.env.fortest
@@ -1,3 +1,4 @@
 PUBLIC_PATH="https://storage.googleapis.com/eyezontestscript/"
 BUNDLE_OUTPUT_DIR="./test"
 LEAVE_OPTION="true"
+ALLOW_NOTIFICATIONS="true"
